--- a/assignmentsite/assignment-1.html
+++ b/assignmentsite/assignment-1.html
@@ -18,9 +18,9 @@
 <h1>Assignment-1</h1>
 
 <div class="row">
-  <div class="col-lg-4 col-md-6 col-sd-12"><p id="p1">chicken</p><section>Education is the most important factor for the development of human civilization.Education provides the nation with man powers, promotes national unity and uplifts public awareness. Education provides the nation with those educated hands.</section></div>
-  <div class="col-lg-4 col-md-6 col-sd-12"><p id="p2">beef</p><section>Education is the most important factor for the development of human civilization.Education provides the nation with man powers, promotes national unity and uplifts public awareness. Education provides the nation with those educated hands.</section></div>
-  <div class="col-lg-4 col-md-12 col-sd-12"><p id="p3">burger</p><section>Education is the most important factor for the development of human civilization.Education provides the nation with man powers, promotes national unity and uplifts public awareness. Education provides the nation with those educated hands.</section></div>
+  <div class="col-lg-4 col-md-6 col-sd-12"><p id="p1">chicken</p><section><h2>Education is the most important factor for the development of human civilization.Education provides the nation with man powers, promotes national unity and uplifts public awareness. Education provides the nation with those educated hands.</h2></section></div>
+  <div class="col-lg-4 col-md-6 col-sd-12"><p id="p2">beef</p><section><h2>Education is the most important factor for the development of human civilization.Education provides the nation with man powers, promotes national unity and uplifts public awareness. Education provides the nation with those educated hands.</h2></section></div>
+  <div class="col-lg-4 col-md-12 col-sd-12"><p id="p3">burger</p><section><h2>Education is the most important factor for the development of human civilization.Education provides the nation with man powers, promotes national unity and uplifts public awareness. Education provides the nation with those educated hands.</h2></section></div>
   
 </div>
 
